notused/auth-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-virtual-service
  namespace: default
spec:
  hosts:
    - auth-verify.default.svc.cluster.local
  http:
    - route:
        - destination:
            host: auth-verify.default.svc.cluster.local

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-verify.default.svc.cluster.local
spec:
  hosts:
    - "*"
  gateways:
    - backend-gateway
  http:
      route:
        - destination:
            host: auth-verify.default.svc.cluster.local
            port:
              number: 3000
---
